src/routes/habitat/components/StreamProfile/info/style.scss
@import "../../../../../style/media-query.scss";

.info {
  display: flex;
  min-width: 280px;
  max-width: 600px;
  align-items: center;

  @media screen and (max-width: #{$phone-landscape-width}) {
    width: 100%;
  }

  @media screen and (min-width: #{$tablet-portrait-width}) {
    max-width: 330px;
  }
}

.profileImgWrapper {
  position: relative;
  margin-right: 10px;
  z-index: 1;
}

.background {
  height: 130px;
  width: 130px;
  border-radius: 50%;
  background: linear-gradient(285deg, rgba(255,165,175, 1) 0%, rgba(255,199,167,1) 50%, rgba(255,163,175,1) 100%);
  position: absolute;
  top: 0;
  left: 0;
  transform: translate3d(-5px, -5px, 0px);
  cursor: pointer;
}

.interactive {
  cursor: pointer;
}

.profileImg {
  width: 120px;
  height: 120px;
  position: relative;
  z-index: 10;
  border: 4px solid white;
  border-radius: 50%;

  > div {
    width: 100%;
    height: 100%;
    border-radius: 100%;
    overflow: hidden;
  }

  img {
    width: 100%;
    height: 100%;
  }
}

.favBtn {
  display: flex;
  position: absolute;
  bottom: 2px;
  right: 2px;
  background-color: #fff;
  padding: 10px;
  border-radius: 100%;
  border: 0;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, .25);
  cursor: pointer;
  z-index: 5;
}

.mask {
  position: absolute;
  top: 0;
  right: 0;
}

.name {
  margin: 0 0 20px 0;
}

.zooNameWrapper {
  margin: 0;
  color: var(--charcoalLight);
  display: flex;
  align-items: center;
  line-height: 22px;

  img {
    max-width: 80px;
    max-height: 38px;
  }
}

.mobile {

  &.profileImgWrapper {
    margin-right: 30px;
  }

  .profileImg {
    margin-right: 0px;
    z-index: 0;
  }

  .mask {
    display: none;
  }
}

